========== 2024-01-12 ==========
 - Changed the algorithm of MiscRoutine.bin2dex() into a more efficient one.
========== 2023-12-25 ==========
 - Added in HilbertSpace.jl a function to generate bilayer basis.
=========== 2023-12-14 ==========
 - Added FQH_bilayer.jl library. This library is specifically designed to handle bilayer stage with color-flux attachment.
=========== 2023-10-20 ==========
 - In FQH_states_v2.jl added a function to print vector with basis in decimal format
 
=========== 2023-07-17 ==========
 - In HilbertSpace.jl modified the functions to allow half-integer L_z
 
=========== 2023-02-08 ==========
 - Moved sphere_coef() from Density.jl to Misc.jl
 - Added HaldaneSphere.jl -- module contains useful functions on the sphere

=========== 2023-02-06 ==========
 - Added findLz() and findLzsphere() into Misc.jl
 - Added get_Lz() and get_Lz_sphere() into FQH_state_v2.jl


=========== 2022-11-03 ==========
 - Added prune!(::FQH_state_mutable; tol) remove the basis with zero coefficients

 - Added invert!(::FQH_state_mutable) invert the state on the sphere

 - Added Base.-() subtract one state from another (missed out last time)
 
 - Changed variable types in all base linear algebra operation from ::FQH_state to ::AbstractFQH_state


=========== 2022-11-01 ==========
 - Added a function to calculate density on the sphere.

 
=========== 2022-10-14 ==========
 - Added Main.FQH_states.FQH_state_mutable. As the name implies, variables of this struct can be mutated freely after they are created.

 - Added AbstractFQH_state, a parent type of FQH_state and FQH_state_mutable

 - Added wfnormalize!(), sphere_normalize!(), disk_normalize!() to Main.FQH_states. These functions act directly on FQH_state_mutable variable.

 - Added collapse!(::FQH_state_mutable) that acts on FQH_state_mutable. This function collects all pairs of basis and coefficient in a given state; coefficients of repeated basis (if any) are added up. 
